Fix login button alignment

--- a/front/src/Forms.scss
+++ b/front/src/Forms.scss
@@ -14,6 +14,7 @@ button.no-margin:active {
   button,
   button:active {
     margin-left: 1em;
+    margin-right: 0;
   }
 }
 
